--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,4 +24,14 @@ id="WebApp_ID" version="3.1">
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <context-param>
+        <param-name>struts.devMode</param-name>
+        <param-value>true</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>struts.locale</param-name>
+        <param-value>ja</param-value>
+    </context-param>
+
 </web-app>
